tests/baselines/reference/scannerNumericLiteral3.errors.txt
==== tests/cases/compiler/scannerNumericLiteral3.ts (2 errors) ====
    01.0
    ~~
!!! scannerNumericLiteral3.ts(1,1): error TS1085: Octal literals are not available when targeting ECMAScript 5 and higher.
      ~~
!!! scannerNumericLiteral3.ts(1,3): error TS1005: ';' expected.